Login Done Recaptcha Broke

--- a/Digoel/Views/Account/Login.cshtml
+++ b/Digoel/Views/Account/Login.cshtml
@@ -36,6 +36,10 @@
                         </div>
                     </div>
                 </div>
+
+  
+                <div class="g-recaptcha" data-sitekey="6LckuN4UAAAAAK2HdGQuomQ6eIoU5l4M4g1xX9IX"></div>
+
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Log in" class="btn btn-default" />
@@ -45,9 +49,9 @@
                     @Html.ActionLink("Register as a new user", "Register")
                 </p>
                 @* Enable this once you have account confirmation enabled for password reset functionality
-                    <p>
-                        @Html.ActionLink("Forgot your password?", "ForgotPassword")
-                    </p>*@
+            <p>
+                @Html.ActionLink("Forgot your password?", "ForgotPassword")
+            </p>*@
             }
         </section>
     </div>
