--- a/Digoel/Views/Account/Register.cshtml
+++ b/Digoel/Views/Account/Register.cshtml
@@ -29,6 +29,9 @@
             @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
+
+    <div class="g-recaptcha" data-sitekey="6LckuN4UAAAAAK2HdGQuomQ6eIoU5l4M4g1xX9IX"></div>
+    //<script src='https://www.google.com/recaptcha/api.js'></script> 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Register" />
