--- a/Digoel/Views/Shared/_Layout.cshtml
+++ b/Digoel/Views/Shared/_Layout.cshtml
@@ -23,6 +23,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Password Storage", "Index", "PasswordStorage")</li>
                     <li>@Html.ActionLink("Leaked Passwords", "LeakedView", "PasswordLeaked")</li>
+                    <li>@Html.ActionLink("Password Generator", "Index", "PasswordGen")</li>
+                    
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
