--- a/Digoel/Views/PasswordStorage/Create.cshtml
+++ b/Digoel/Views/PasswordStorage/Create.cshtml
@@ -36,12 +36,19 @@
                                 <div class="form-group">
                                     @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-3" })
                                     <div class="col-md-9">
-                                        @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                                        @if (Session["generated_password"] == null)
+                                        {
+                                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+                                        }
+                                        else
+                                        {
+                                            <input type="password" name="Password" value="@Session["generated_password"] " id="Password" class="Password"/>
+                                            @*@Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" }, @Value = "aa" })*@
+                                        }
+                                   
                                         @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
-
-                    
 
                                 <div class="form-group">
                                     <div class="col-md-offset-3 col-md-9">
