--- a/Digoel/Views/PasswordGen/Index.cshtml
+++ b/Digoel/Views/PasswordGen/Index.cshtml
@@ -16,11 +16,11 @@
             </div>
 
             <div class="form-group">
-                <span style="font-weight:bold"> Think Random:</span>  Randomly chooses three words and puts them together to make a unique and easy to remember password. Length does not matter
+                <span style="font-weight:bold"> Think Random:</span>  Randomly chooses three words and puts them together to make a unique and easy to remember password. 
             </div>
 
             <div class="form-group">
-                <span style="font-weight:bold"> Numbers:  </span>  Randomly chooses a series of numbers to create a password. User chooses a password.
+                <span style="font-weight:bold"> Numbers:  </span>  Randomly chooses a series of numbers to create a password.
             </div>
 
             <br /><br />
@@ -104,7 +104,7 @@
 
                 if (selected_type == 2 || selected_type == 3) {
                     if (selected_length == "" || selected_length == null) {
-                        alert("You have to define the length of your password");
+                        alert("Please define the length of your password");
                         return false;
                     }
                 }
