--- a/Digoel/Views/Shared/_Layout.cshtml
+++ b/Digoel/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Password Storage", "Index", "PasswordStorage")</li>
                     <li>@Html.ActionLink("Leaked Passwords", "LeakedView", "PasswordLeaked")</li>
                     <li>@Html.ActionLink("Password Generator", "Index", "PasswordGen")</li>
-                    
+                    <li>@Html.ActionLink("Password Strength Check", "Index", "StrengthCheck")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
