--- a/Digoel/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/Digoel/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,7 +1,12 @@
 ﻿@model Digoel.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-
+<h4></h4>
+<hr />
+@{
+    var loginProviders = Context.GetOwinContext().Authentication.GetExternalAuthenticationTypes();
+    if (loginProviders.Count() == 0) {
+  
     }
     else {
         using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl })) {
